--- a/dasha/web/templates/assets/sidebar.css
+++ b/dasha/web/templates/assets/sidebar.css
@@ -40,13 +40,24 @@
   padding: 1rem 1rem;
 }
 
-@media (min-width: 64em) {
+.sticky-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 30px;
+  line-height: 30px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+@media (min-width: 992px) {
+/* @media (min-width: 64em) { */
   #sidebar {
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 20rem;
+    width: 16rem;
     text-align: left;
     transition: margin 0.3s ease-in-out, padding 0.3s ease-in-out;
   }
@@ -60,7 +71,7 @@
 
   /* add negative margin to sidebar to achieve the collapse */
   #sidebar.collapsed {
-    margin-left: -15.5rem;
+    margin-left: -11.5rem;
     padding-right: 0.5rem;
   }
 
@@ -92,7 +103,7 @@
 
   /* set margins of the main content so that it doesn't overlap the sidebar */
   #page-content {
-    margin-left: 21rem;
+    margin-left: 17rem;
     margin-right: 2rem;
     transition: margin-left 0.3s ease-in-out;
   }
