--- a/dasha/web/templates/assets/common.css
+++ b/dasha/web/templates/assets/common.css
@@ -3,18 +3,23 @@ a {color: #0275d8 !important}
 
 a:hover {color: #014c8c !important}
 
-.dash-spreadsheet-container
+.viewport-height * .dash-spreadsheet-container
 {
     /* maxHeight: 90vh !important; */
     max-height: 80vh !important;
     height: 80vh;
-    float: right !important;
+    /* float: right !important; */
 }
 
 .dash-table-container .dash-spreadsheet-container div {
     margin: 0px;
     padding: 0px;
 }
+
+.dash-table-container * .dash-fixed-row {
+    z-index: auto !important;
+}
+
 
 .daq-graduatedbar div
 {
