fix form invalid css

--- a/dasha/web/templates/assets/common.css
+++ b/dasha/web/templates/assets/common.css
@@ -77,3 +77,9 @@ a:hover {color: #014c8c !important}
 .form-check-compact > .form-check {
     padding-left: 0 !important
 }
+
+/* input */
+input:invalid {
+  border-color: red;
+  outline: none!important;
+}
